AbkVerz: Doppelte Def. entfernt, Abk nachgetragen

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -1,5 +1,5 @@
 % \begin{refsection}
-\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
+\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
 
 \chapter{Die Anrufung}
 \label{Anrufung}
@@ -56,7 +56,7 @@ Aus dem Rahmen fallen natürlich auch immer die Berufungs- und Beschwerdeanrufun
 \label{Anrufung:Statthaftigkeit:Antragsgegner}
 Der Antragsgegner\index[idx]{Antragsgegner|textbf} oder die Antragsgegnerin ist ebenso notwendig und muss ebenso klar und eindeutig aus der Anrufung entnehmbar sein. Bezüglich der Vertretung gilt hier dasselbe wie bei dem \index[idx]{Antragsteller} Antragsteller bzw. der Antragstellerin.
 
-Bei allen Verfahren nach SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)} handelt es sicht um sogenannte kontradiktorische Verfahren.
+Bei allen Verfahren nach SGO handelt es sicht um sogenannte kontradiktorische Verfahren.
 Das bedeutet, dass das Verfahren Streit von zwei Parteien um gegenläufige Interessen ausgestaltet ist.
 In den meisten Fällen ist der Antragsgegner bzw. die Antragsgegnerin daher ein Organ, in wenigen Fällen -- primär bei gerichtlich verhängten Ordnungsmaßnahmen wie dem Parteiausschluss -- aber auch ein einzelnes Mitglied.
 Wichtig dabei ist aber: Es gibt nach SGO keine Verfahren von Mitgliedern gegen andere Mitglieder.
@@ -175,7 +175,7 @@ Dabei kennt die SGO unterschiedliche Anrufungsfristen.
 Die Ausnahme stellt hier die Anrufungsfrist im Parteiausschlussverfahren dar.
 Diese ist keine formelle Frist wie die anderen Fristen dar, sondern ist eine wertende, materielle Präklusionsfrist.
 Das bedeutet, dass über die fristgerechte Einbringung der Vorwürfe nicht schon mit Eröffnung zu bescheiden ist, sondern erst im Urteil nach durchlaufenem Verfahren.
-Dies soll einerseits das Parteimitglied dagegen schützen, dass es sich gegen alte Vorwürfe schützen muss und andererseits ein Parteiausschlussverfahren auch dann noch ermöglichen, wenn einzelne Handlungen schon länger zurück liegen, aber Teil eines Großen und Ganzen sind, das einen einzigen, fortlaufende Gesamtverstoß gegen Satzung, Grundsätze oder Ordnung der Partei mit schwerem Schaden darstellt.\footnote{Zur Zulässigkeit des Parteiausschlusses aufgrund eines solchen Gesamtverstoßes \cite[S.~19]{LSGHE20130624} m.w.N.\nomenclature{m.w.N.}{mit weiteren Nachweisen} und später bestätigend \cite{BSG20131028}.}
+Dies soll einerseits das Parteimitglied dagegen schützen, dass es sich gegen alte Vorwürfe schützen muss und andererseits ein Parteiausschlussverfahren auch dann noch ermöglichen, wenn einzelne Handlungen schon länger zurück liegen, aber Teil eines Großen und Ganzen sind, das einen einzigen, fortlaufende Gesamtverstoß gegen Satzung, Grundsätze oder Ordnung der Partei mit schwerem Schaden darstellt.\footnote{Zur Zulässigkeit des Parteiausschlusses aufgrund eines solchen Gesamtverstoßes \cite[S.~19]{LSGHE20130624}\nomenclature{LSG~HE}{Landesschiedsgericht Hessen} m.w.N.\nomenclature{m.w.N.}{mit weiteren Nachweisen} und später bestätigend \cite{BSG20131028}.}
 Alle anderen genannten Fristen sind dagegen echte formelle Fristen die schon die Eröffnung eines Verfahrens verhindern sollen.
 
 Die Fristberechnung folgt dabei den \SSS~186 ff. BGB\index[paridx]{BGB!186@\S~186}.
@@ -315,7 +315,7 @@ In diesem Fall kann wegen der Hemmungswirkung der Schlichtung die Frist nicht be
 Die Nachbesserung ist in der Schiedsgerichtsordnung nicht erwähnt.
 Dennoch sollten Schiedsgerichte der anrufenden Partei die Möglichkeit dazu geben, sofern die Klage noch nicht verfristet ist.
 Ob es gar eine Pflicht für die Schiedsgerichte gibt, Gelegenheit zur Nachbesserung zu geben, ist unklar.
-Das Landesschiedsgericht Bayern nimmmt dies jedenfalls dann an, wenn innerhalb der regulären Anrufungsfrist noch genügend Zeit verblieben ist,\footnote{So in \cite[S.~2~f.]{LSGBYB413U}, in der Bestätigung der Entscheidung durch das Bundesschiedsgericht mit \cite{BSG314HA} weiter thematisiert.} das Landesschiedsgericht Brandenburg nimmt dies wohl selbst dann an, wenn nur noch wenig Restfrist verblieben ist und setzt dann eine die Anrufungsfrist verlängernde Nachfrist.\footnote{So wohl jedenfalls in \cites[S.~7]{LSGBB133}{LSGBB134}.}
+Das Landesschiedsgericht Bayern nimmmt dies jedenfalls dann an, wenn innerhalb der regulären Anrufungsfrist noch genügend Zeit verblieben ist,\footnote{So in \cite[S.~2~f.]{LSGBYB413U},\nomenclature{LSG~BY}{Landesschiedsgericht Bayern (Bayerisches Landesschiedsgericht)} in der Bestätigung der Entscheidung durch das Bundesschiedsgericht mit \cite{BSG314HA} weiter thematisiert.} das Landesschiedsgericht Brandenburg nimmt dies wohl selbst dann an, wenn nur noch wenig Restfrist verblieben ist und setzt dann eine die Anrufungsfrist verlängernde Nachfrist.\footnote{So wohl jedenfalls in \cites[S.~7]{LSGBB133}{LSGBB134}.}
 Das Bundesschiedsgericht hat zumindest die Erfordernis einer die Anrufungsfrist verlängernden Nachfristsetzung verneint,\footnote{\cites[S.~2]{BSG2315HS}[S.~2]{BSG20130227}.} und auch ansonsten die verpflichtende Erfordernis einer Nachbesserungsaufforderung  nie angenommen und zumindest dann verneint, wenn eine Fristberechnung dem Schiedsgericht nicht möglich ist und es durch die Nachbesserungsaufforderung, die eine die Anrufungsfrist ersetzende neue Frist setzt, einer ansonsten verfristeten Anrufung zum Erfolg verhelfen könnte.\footnote{\cites{BSG3915HS}[S.~2]{BSG215HS}}
 
 \subsection{Nichteröffnungsbeschluss}
@@ -360,7 +360,7 @@ Das Bundesschiedsgericht ist in jüngster Zeit von Rücknehmbarkeit eines Eröff
 Gerade im Prozessrecht mit seinen feinen Regelungen des Verfahrensablaufs ist es äußerst problematisch und begründungsbedürftig, wenn aus dem Vorhandensein der Regelung eine Kompetenz zu einem exakt gegenlaufenden Beschluss abgeleitet wird.
 Zudem hat das Bundesschiedsgericht hier die tatsächliche Antragsbefugnis fehlerhaft für ein Statthaftigkeitskriterium gehalten und sie nicht, wie es korrekt wäre, als echtes Zulässigkeitskriterium behandelt (vgl. \ref{Anrufung:Kriterien:Antragsbefugnis}).
 
-In älterer Rechtsprechung war das Bundesschiedgericht daher der Überzeugung, dass eine solche Rücknahme nicht möglich ist, es sei denn, dass der Eröffnungsbeschluss schon explizit unter einem Vorbehalt bestehender aus einer mit einer Frist versehenen Nachbesserungsaufforderung getroffen wurde und damit selbst bedingt war.\footnote{Vgl. \cite[S.~2]{BSG20130715} zu \cite{LSGNRW2013011}, in welchem das Bundesschiedsgericht einen solchen Vorbehalt erfüllt sah.}
+In älterer Rechtsprechung war das Bundesschiedgericht daher der Überzeugung, dass eine solche Rücknahme nicht möglich ist, es sei denn, dass der Eröffnungsbeschluss schon explizit unter einem Vorbehalt bestehender aus einer mit einer Frist versehenen Nachbesserungsaufforderung getroffen wurde und damit selbst bedingt war.\footnote{Vgl. \cite[S.~2]{BSG20130715} zu \cite{LSGNRW2013011},\nomenclature{LSG~NRW}{Landesschiedsgericht Nordrhein-Westfalen} in welchem das Bundesschiedsgericht einen solchen Vorbehalt erfüllt sah.}
 
 Unter Anbetracht des Wortlauts der Schiedsgerichtsordnung ist die neuere Ansicht des Bundesschiedsgerichtes nicht haltbar.
 Es bedarf schon gar keiner Analogie, da es schlicht an der notwendigen planwidrigen Regelungslücke fehlt, die aber Vorraussetzung jeder Analogie ist.
