--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -95,6 +95,8 @@ Allerdings ist die Schiedsgerichtsordnung an dieser Stelle hochproblematisch, da
 Dies würde Prozesstaktiken ermöglichen, die defacto einer parteigetriebenen Richterauswahl nahekommen, indem von Seite einer Streitpartei versucht wird, das Verfahren zu beschleunigen oder zu verzögern und so mit oder ohne den kranken Richter zum Abschluss zu bringen. 
 
 Daher muss davon ausgegangen werden, dass die entsprechende Satzungsbestimmung über die Rückkehr eines ehemals kranken und deswegen ausgeschiedenen Richters in laufende Verfahren wegen Verstoß gegen das Verbot des Entzugs des gesetzlichen Richters unwirksam ist. Der gesetzliche Richter nach Art.~101 Abs.~1 Satz~2~GG\index[paridx]{GG!101@Art.~101!1@Abs.~1} soll der Gefahr vorbeugen, daß die Justiz durch eine Manipulierung der rechtsprechenden Organe sachfremden Einflüssen ausgesetzt wird, insbesondere daß im Einzelfall durch die Auswahl der zur Entscheidung berufenen Richter ad hoc das Ergebnis der Entscheidung beeinflußt wird, gleichgültig, von welcher Seite die Manipulierung ausgeht.\footnote{So schon \cite[299]{BVerfGE17294}.}
+\nomenclature{BVerfG}{Bundesverfassungsgericht}
+\nomenclature{BVerfGE}{Entscheidungen des Bundesverfassungsgerichts (amtliche Sammlung)}
 
 Auch angesichts typischer Verfahrensdauern im Rahmen der erlaubten Verfahrensmaximalsolldauer ist jeder Zeitraum, der überhaupt zu einem temporären Ausscheiden eines Richters führt, schon so relevant, dass das Verfahren vom eingerückten Ersatzrichter maßgeblich mitbeeinflusst werden konnte.
 Daher muss auch dieser weiterhin dem Spruchkörper angehören.
@@ -119,7 +121,7 @@ Dies Schiedsgerichtsordnung garantiert in \S~5 Abs.~2 SGO\index[paridx]{SGO!5@\S
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis:Prozessuales}
 Einen Antrag auf Ablehnung eines Richters wegen Besorgnis eines Richters kann nur eine Verfahrenspartei stellen, nicht aber der Richter selber.
 
-Der Antrag muss immer eine Begründung enthalten, \S~5 Abs.~3 Satz~1 SGO\index[paridx]{SGO!5@\S~5!3@Abs.~3}, und sich gegen einene einzelnen Richter richten, andernfalls ist er unzulässig.\footnote{\cites[S.~1]{BSG201305062BefangenheitI}{BGHIIARZ101}.}
+Der Antrag muss immer eine Begründung enthalten, \S~5 Abs.~3 Satz~1 SGO\index[paridx]{SGO!5@\S~5!3@Abs.~3}, und sich gegen einene einzelnen Richter richten, andernfalls ist er unzulässig.\footnote{\cites[S.~1]{BSG201305062BefangenheitI}{BGHIIARZ101}.}\nomenclature{BGH}{Bundesgerichtshof}
 Eine Ablehnung des ganzen Gerichts auf einmal ist also nicht möglich, allerdings können durchaus mehrere oder sogar alle Richter eines Gerichts jeweils einzeln nacheieinader abgelehnt werden.
 Entscheidend für die Bescheidungsreihenfolge ist dann die Reihenfolge der Antragstellung.
 In besonderen Fällen ist sogar der Verweis auf die gleiche Begründung für mehrere Richter zulässig, nämlich immer dann, wenn vorgetragen wird, das die die Besorgnis der Befangenheit tragende Tatsache auf mehrere Richter jeweils individuell gleichzeitig zutrifft.
@@ -151,7 +153,7 @@ Dies ist eine wertende Entscheidung und nicht eine bloße Formalentscheidung und
 Allerdings kann auf die Stellungnahme und die Anhörung der Parteien verzichtet werden, wenn die geänderte Besetzung direkt zur Überzeugung gelangt, dass der Antrag rechtsmissbräuchlich ist, da dann kein zulässiger Ablehnungsantrag vorliegt.
 Im Zweifel gilt allerdings immer: \Zitat{Eine Anhörung zu viel schadet nicht, eine Anhörung zu wenig kann zur Aufhebung des Urteils führen.}
 
-Rechtsmissbräuchlich ist der Antrag auf Richterablehnung, wenn er nur gestellt wird, um das Verfahren aufzuhalten,\footnote{\cites[S.~8]{BSG2815HS}.} das Gericht zu überlasten oder mit offensichtlich nicht aussichtsreichen Befangenheitsanträgen zu bombardieren,\footnote{\cites[S.~4]{BSG201305062BefangenheitII}.} oder einen nicht genehmen Richter allein wegen seiner Spruchtätigkeit oder Rechtsüberzeugung abzulehnen.\footnote{\cites[S.~5]{BSG115HSBefangeheitIV}{OLGNaumburg3WF7609}.}
+Rechtsmissbräuchlich ist der Antrag auf Richterablehnung, wenn er nur gestellt wird, um das Verfahren aufzuhalten,\footnote{\cites[S.~8]{BSG2815HS}.} das Gericht zu überlasten oder mit offensichtlich nicht aussichtsreichen Befangenheitsanträgen zu bombardieren,\footnote{\cites[S.~4]{BSG201305062BefangenheitII}.} oder einen nicht genehmen Richter allein wegen seiner Spruchtätigkeit oder Rechtsüberzeugung abzulehnen.\footnote{\cites[S.~5]{BSG115HSBefangeheitIV}{OLGNaumburg3WF7609}.\nomenclature{OLG}{Oberlandesgericht}}
 
 \subsection{Änderung durch Ausschluss eines Richters wegen satzungsmäßig unwiderlegbar vermuteter Befangenheit}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung}
