--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -4,7 +4,7 @@
 \chapter{Urteilsaufbau}
 
 \section{Grundlagen}
-Gem. \S~12 Abs.~3 S.~1~SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}\index[paridx]{SGO!\S~12!Abs.~3} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.}
+Gem. \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~3} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.}
 Es empfiehlt sich, dieser Aufzählung notwendiger Inhalte auch in der Reihenfolge zu folgen.
 Ein Urteil beginnt daher, nach einigen Formalien im \emph{Rubrum}, mit der letztendlichen Entscheidung des Gerichts.
 Sie wird im \emph{Tenor} aufgeführt.
@@ -136,7 +136,7 @@ Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsb
 \index[idx]{Sondervotum}
 \index[idx]{Abweichende Meinung|see{Sondervotum}}
 Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.}
-Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~2~BVerfGG\index[paridx]{BVerfGG!\S~30!Abs.~2}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}).
+Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~2~BVerfGG\index[paridx]{BVerfGG!\S~30!Abs.~2}).
 In der Piratenpartei steht es allen Richterinnen und Richtern zu, unabhängig von der Ebene ihres Schiedsgerichts.
 Die Bestimmung zu solchen abweichenden Meinungen (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!\S~2!Abs.~4}), dar.\index[idx]{Verschwiegenheitspflicht}
 
