--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -23,7 +23,7 @@ Eine solche Gliederung nimmt die Satzung der Piratenpartei Deutschland insofern 
 Da die Abschnitte allerdings jeweils unterschiedlich zitiert werden, nämlich die Grundlagensatzung (BS\nomenclature{BS}{Bundessatzung (Abschnitt~A der Bundessatzung, Grundlagensatzung)}, Abschnitt~A)\footnote{Wird \enquote{die Bundessatzung} zitiert, bezieht sich das Zitat in der Regel auf die Grundlagensatzung.}, die Finanzordnung (FO\nomenclature{FO}{Finanzordnung (Abschnitt~B der Bundessatzung)}, Abschnitt~B) und die Schiedsgerichtsordnung (SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}, Abschnitt~C) und auch die Paragraphenzählung jeweils bei 1 beginnt, ist es leichter, sie sich als eigenständige Regelwerke zu vergegenwärtigen.
 So untergliedert letztlich nur die Finanzordnung oberhalb der Ebene der Paragraphen.
 Diese Gliederungsebene oberhalb der Paragraphen in der Finanzordnung ist nicht benannt.
-Da \enquote{Abschnitte} aber bereits, wie geschildert, durch die Gesamtsatzung verwendet werden, empfiehlt sich die Verwendung der neutralen Bezeichnung \enquote{Teil}.\footnote{Insb. \enquote{Unterabschnitt} ist ungeeignet, da die Gliederung in Abschnitte, wie geschildert, kaum argumentativ dargestellt wird.}
+Da \enquote{Abschnitte} aber bereits, wie geschildert, durch die Gesamtsatzung verwendet werden, empfiehlt sich die Verwendung der neutralen Bezeichnung \enquote{Teil}.\footnote{Insb.\nomenclature{insb.}{insbesondere} \enquote{Unterabschnitt} ist ungeeignet, da die Gliederung in Abschnitte, wie geschildert, kaum argumentativ dargestellt wird.}
 
 Paragraphen gliedern sich zunächst in Absätze.
 Auch Absätze sind nummeriert, allerdings nur eindeutig in Bezug auf den Paragraphen, nicht mehr in Bezug auf das \enquote{Gesamtwerk}.
@@ -38,7 +38,7 @@ Je genauer der betreffende Abschnitt durch das Zitat benannt wird, desto leichte
 Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt.\footnote{Das \enquote{Quellregelwerk} erst am Ende zu benennen, mag der Ordnung des Zitats – \Zitat{vom Großen ins Kleine} – widersprechen, findet jedoch im juristischen Gebrauch absolute Verbreitung.}
 Die Gliederungsebenen zwischen der Ebene \enquote{Regelwerk} und der Ebene \enquote{Paragraph} werden nicht mitzitiert, da sie lediglich der systematischen Übersicht dienen; die Nennung von Regelwerk und nummeriertem Paragraphen reicht zur Auffindung bereits aus.\footnote{Es gibt daher auch keine vereinheitlichen Regeln über Verwendung oder gar Rangfolge dieser reinen \enquote{Gliederungsebenen}; sie können vom jeweiligen Gesetz- bzw. Satzungsgeber völlig frei verwendet werden.}
 
-\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\index[paridx]{BS!\S~9a!Abs.~9} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
+\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\nomenclature{Abs.}{Absatz}\nomenclature{S.}{Satz}\nomenclature{Hs.}{Halbsatz}\index[paridx]{BS!\S~9a!Abs.~9} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
 
 \subsection{Tatbestände und Rechtsfolgen}
 \index[idx]{Rechtsnorm!Aufbau}
@@ -86,7 +86,7 @@ Im bereits oben verwendeten Beispiel der \enquote{grundsätzlichen Bestimmung} l
 \Zitat{Ist die fragliche Satzungsbestimmung eine grundlegende Bestimmung im Sinne von \S~14~BS?}
 
 Die \textbf{Definition} gibt Antwort auf die im Obersatz implizit gestellte Frage \Zitat{Was ist überhaupt eine grundsätzliche Bestimmung?}.
-Wenn nicht auf bestehende Rechtsprechung zurückgegriffen werden kann\footnote{Vgl. hierzu ausführlich \cite[S.~8]{LSGBB135}; \cite[S.~5]{BSG1215HS}.} muss hier durch Auslegung eine Definition bestimmt werden.
+Wenn nicht auf bestehende Rechtsprechung zurückgegriffen werden kann\footnote{Vgl. hierzu ausführlich \cite[S.~8]{LSGBB135};\nomenclature{LSG~BB}{Landesschiedsgericht Brandenburg} \cite[S.~5]{BSG1215HS}.} muss hier durch Auslegung eine Definition bestimmt werden.
 
 \index[idx]{Subsumtion}
 Die \textbf{Subsumtion} ist der Schritt, in dem geprüft wird, ob der zu prüfende Sachverhalt die zuvor gefundene Definition erfüllt.
