Fußnote: LSG NRW zu Kostenentscheidungen

--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -49,7 +49,7 @@ In einem Berufungsverfahren wird die Bezeichnung als \enquote{Antragstellerin} o
 \index[idx]{Urteilstenor|see{Tenor}}
 Der Tenor enthält die Entscheidung (oder die Entscheidungen) in der Hauptsache.
 
-Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!\S~16!Abs.~1} kann eine Kostenentscheidung\index[idx]{Kosten!Entscheidung} entfallen.
+Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!\S~16!Abs.~1} kann eine Kostenentscheidung\index[idx]{Kosten!Entscheidung} entfallen.\footnote{Eine Kostenentscheidung muss auch auf expliziten Antrag einer Partei nicht getroffen werden, \cite{LSGNRW2016001HStreitwert}.}
 Auch einer Entscheidung über vorläufige Vollstreckbarkeit\index[idx]{Vollstreckung!vorläufige} bedarf es nicht, da die SGO weder Vollstreckungsvorschriften vorsieht, noch Maßnahmen zur Zwangsvollstreckung kennt.
 Ebenso ist nicht notwendig, ein mögliches Rechtsmittel im Tenor aufzuführen, da über die Möglichkeit von Rechtsmitteln nicht durch das Gericht entschieden wird:
 Die Entscheidung, ob Rechtsmittel möglich sind, oder nicht, wird von der SGO getroffen.
