--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -234,6 +234,15 @@
   gender = {sn},
   url = {https://wiki.piratenpartei.de/Datei:Beschluss_LSG-NRW-2013-011_Ablehnung_anonym.pdf}
 }
+@RULING{LSGNRW2016001HStreitwert,
+  court = {Landesschiedsgericht~Nordrhein-Westfalen},
+  shortcourt = {LSG~NRW},
+  decisiontype = {Beschluss},
+  sign = {LSG-NRW-2016-001-H},
+  date={2016-03-26},
+  gender = {sn},
+  url = {https://wiki.piratenpartei.de/Datei:Lsg-nrw-2016-001-H-streitwert-anonym.pdf}
+}
 @RULING{LSGHE20130624,
   court = {Landesschiedsgericht~Hessen},
   shortcourt = {LSG~HE},
