--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -1,7 +1,7 @@
 % \begin{refsection}
 \chapterpreamble{Dokumentiert (vgl. \S~14~SGO\index[paridx]{SGO!\S~14}) werden Verfahrensakten und Urteile. Die Verfahrensakte umfasst sämtliche verfahrensrelevante Kommunikation des Gerichts mit den Parteien (und umgekehrt). Das umfasst auch Aktennotizen, die sich auf den Verfahrensverlauf beziehen (z.B. bei telefonisch gestellten Anträgen o.ä.). Interne Kommunikation des Gerichts, auch wertende Notizen einzelner Mitglieder des Gremiums, gehören nicht zur Verfahrensakte. Werden während Verfahren Tonaufzeichnungen angefertigt, sind diese zu löschen, sobald die Parteien das daraus angefertigte Protokoll erhalten und einen Monat keinen Widerspruch erhoben haben, \S~14~Abs.3~SGO\index[paridx]{SGO!\S~14 Abs.~3}. Die Verfahrensakte ist fünf Jahre nach Abschluss des Verfahrens aufzubewahren, Urteile unbefristet, \S~14~Abs.~5~SGO\index[paridx]{SGO!\S~14 Abs.~5}.}
 
-\chapter{Verfahrensdokumentation}
+\chapter{Dokumentation und Rechenschaftsbericht}
 
 %\section{Protokolle}
 %Sitzungsprotokolle? Verhandlungsprotokolle?
@@ -11,6 +11,10 @@
 
 %\section{Urteile}
 %\subsection{Anonymisierung und Pseudonymisierung}
+
+%\section{Öffentliche Mitteilungen}
+%\subsection{Bekanntmachung von Beeinflussungsversuchen}
+%\subsection{Stellungnahmen zu laufenden Verfahren}
 
 %\section{Aufbewahrung der Akten}
 %elektronisch
