--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -218,5 +218,5 @@ Die neuere Regel überschreibt die ältere Regel, die speziellere Regel drängt 
 %\subsection{Analogieschlüsse}
 %\section{} %Irgendwas mit Schlüssen?
 
-%\chapterbib
+\chapterbib
 %\end{refsection}
