--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -188,5 +188,5 @@ Auch bei einer fehlerhaften Rechtsmittelbelehrung \enquote{verlängert} sich die
 
 % Eine \section zum Vergleich? Zulässigkeit, Unterschiede zu einem regulären Urteil in der Tenorierung und Begründung
 
-%\chapterbib
+\chapterbib
 % \end{refsection}
