PDF Bookmark zur Inhaltsübersicht hinzugefügt

--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -48,6 +48,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \twocolumn			% Wieder ins Zweitspaltenlayout wechselns
 
 \renewcommand{\contentsname}{Inhaltsübersicht}
+\pdfbookmark{\contentsname}{toc}
 \tableofcontents
 
 \input{Einleitung.tex}
