Nachweis ergänzt, Abkürzungen eingefügt

--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -9,7 +9,8 @@
 %\subsection{Geschäftsordnung} % GO ist für Kapitel "Innere Organisation" geplant – braucht es hier eine eigene Überschrift?
 %Exkurs(?): Geschäftsordnung (hier Ersatzrichter mit Stimmrecht?)
 Das Schiedsgericht ist zwar kein Organ\index[idx]{Organ} im Sinne des \S~8 Abs.~2 PartG\index[paridx]{PartG!8@\S~8!2@Abs.~2}\footnote{\cite[\S~14 Rn.~3]{ipsen2008parteiengesetz}}, da es nicht der originiären politischen Willensbildung der Partei dient, allerdings ist es grundsätzlich ein Organ im weiteren Sinne.
-Dementsprechend haben die Satzungen der Piratenparteien und ihrer Untergliederungen das Schiedsgericht typischerweise auch als Organ bezeichnet.\footnote{MISSING: Satzungen}
+Dementsprechend haben die Satzungen der Piratenparteien und ihrer Untergliederungen das Schiedsgericht typischerweise auch als Organ bezeichnet.\footnote{\S~9 Abs.~2~BS,\index[paridx]{BS!\S~9!Abs.~2} \S~9 Abs.~1~LS-BW,\index[paridx]{LS-BW!\S~9!Abs.~2} \S~9 Abs.~1~LS-BY,\index[paridx]{LS-BY!\S~9!Abs.~1} \S~7 Abs.~1~LS-BB,\index[paridx]{LS-BB!\S~7!Abs.~1} \S~10~LS-HB\index[paridx]{LS-HB!\S~10} \S~8 Nr.~1~c~LS-HH,\index[paridx]{LS-HH!\S~8} \S~9 Abs.~1~LS-HE\index[paridx]{LS-HE!\S~9!Abs.~1} \S~9~LS-MV,\index[paridx]{LS-MV!\S~9} \S~6~LS-NW,\index[paridx]{LS-NW!\S~6} \S~4~LS-RP,\index[paridx]{LS-RP!\S~4} \S~9 Abs.~1~LS-SL,\index[paridx]{LS-SL!\S~9!Abs.~1} \S~6 Abs.~1~LS-SN,\index[paridx]{LS-SN!\S~6!Abs.~1} \S~9 Abs.~1~LS-ST,\index[paridx]{LS-ST!\S~9!Abs.~1} \S~9 Abs.~1~LS-SH,\index[paridx]{LS-SH!\S~9!Abs.~1} \S~6 Abs.~1~LS-TH;\index[paridx]{LS-TH!\S~6!Abs.~1} lediglich die LS-BE, als auch die LS-NI schweigen zum Status.}
+\nomenclature{LS-BW}{Landessatzung Baden-Württemberg} \nomenclature{LS-BY}{Landessatzung Bayern} \nomenclature{LS-BB}{Landessatzung Brandenburg} \nomenclature{LS-BE}{Landessatzung Berlin} \nomenclature{LS-HB}{Landessatzung Bremen} \nomenclature{LS-HH}{Landessatzung Hamburg} \nomenclature{LS-HE}{Landessatzung Hessen} \nomenclature{LS-MV}{Landessatzung Mecklenburg-Vorpommern} \nomenclature{LS-NI}{Landessatzung Niedersachsen} \nomenclature{LS-NW}{Landessatzung Nordrhein-Westfalen} \nomenclature{LS-RP}{Landessatzung Rheinland-Pfalz} \nomenclature{LS-SL}{Landessatzung Saarland} \nomenclature{LS-SN}{Landessatzung Sachsen} \nomenclature{LS-ST}{Landessatzung Sachsen-Anhalt} \nomenclature{LS-TH}{Landessatzung Thüringen} \nomenclature{LS-SH}{Landessatzung Schleswig-Holstein}
 
 \section{Das Schiedsgericht als Organ}
 \label{Zusammensetzung:Organ}
