--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -84,7 +84,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \onecolumn
 
 \printbibliography[heading=bibliography,title={Rechtsprechungsverzeichnis}, type=ruling]
-\printbibliography[heading=bibliography,nottype=ruling]
+\printbibliography[heading=bibliography,title={Literaturverzeichnis},nottype=ruling]
 
 \printnomenclature
 
