--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -146,7 +146,7 @@ Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend a
 Das erleichtert insbesondere den Parteien, aber auch der Parteiöffentlichkeit und anderen Schiedsgerichten das Lesen.
 Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
 
-Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, \S~12 Abs.~4 S.~2~SGO\index[paridx]{SGO!\S12!Abs.~4}.
+Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, \S~12 Abs.~4 S.~2~SGO\index[paridx]{SGO!\S~12!Abs.~4}.
 
 \section{Die Rechtsmittelbelehrung}
 \index[idx]{Rechtsmittelbelehrung}
