--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -16,7 +16,7 @@ Das war selbst dem Gesetzgeber bewusst.
 Um die \emph{Staatsferne der Parteien} zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
 Parteischiedsgerichte handeln dabei nach ihrer von ihrer eigenen Partei erlassenen Verfahrensordnung.
 
-Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten (vgl. \S~14 Abs.~4 PartG\index[paridx]{PartG!\S~14!Abs.~4} und sich strikt an die von der eigenen Partei erlassene Prozessordnung halten.
+Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten (vgl. \S~14 Abs.~4 PartG)\index[paridx]{PartG!\S~14!Abs.~4} und sich strikt an die von der eigenen Partei erlassene Prozessordnung halten.
 
 Da gerade in der Piratenpartei oft Unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
 Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben.
